Bump java version (#6)
* Bump java version